--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,6 +23,10 @@ http {
     upstream k8s-ui{
      server test2.test:3000 weight=1; 
     }
+    
+     upstream elasticsearch-elk{
+     server elasticsearch.elk:5601 weight=1; 
+    }
  
  
         ##
@@ -109,6 +113,14 @@ http {
            proxy_pass http://test2/;
         
         }    
+        
+        location /els{
+
+           proxy_pass http://elasticsearch-elk/;
+        
+        }    
+        
+        
   }
   
      
