--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,8 +24,12 @@ http {
      server test2.test:3000 weight=1; 
     }
     
-     upstream elasticsearch-elk{
-     server elasticsearch.elk:5601 weight=1; 
+     upstream elasticsearch-elk-9200{
+     server elasticsearch.elk:9200 weight=1; 
+    }
+    
+    upstream elasticsearch-elk-9300{
+     server elasticsearch.elk:9300 weight=1; 
     }
  
  
@@ -114,9 +118,15 @@ http {
         
         }    
         
-        location /els{
+        location /els9200{
 
-           proxy_pass http://elasticsearch-elk/;
+           proxy_pass http://elasticsearch-elk-9200/;
+        
+        }    
+        
+       location /els9300{
+
+           proxy_pass http://elasticsearch-elk-9300/;
         
         }    
         
