--- a/elk/elasticsearch.dpm.yml
+++ b/elk/elasticsearch.dpm.yml
@@ -7,8 +7,10 @@ spec:
   type: LoadBalancer
   ports:
   - port: 9200
+    name: p9200
     targetPort: 9200
   - port: 9300
+    name: p9300
     targetPort: 9300    
   selector:
     app: elasticsearch
