--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,6 +32,10 @@ http {
      server elasticsearch.elk:9300 weight=1; 
     }
  
+     upstream kibana-elk{
+     server kibana.elk:5601 weight=1; 
+    }
+ 
  
         ##
         # Basic Settings
@@ -130,6 +134,11 @@ http {
         
         }    
         
+             location /kibana{
+
+           proxy_pass http://kibana-elk/;
+        
+        }  
         
   }
   
