--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -134,14 +134,23 @@ http {
         
         }    
         
-             location /kibana{
+      
+        
+  } 
+    
+     server {
+
+        listen    5601;
+
+        server_name  3;
+        
+          location /{
 
            proxy_pass http://kibana-elk/;
         
         }  
-        
-  }
-  
+    
+    }
      
  #end server 
 
