--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,17 +23,13 @@ http {
     upstream k8s-ui{
      server test2.test:3000 weight=1; 
     }
-    
-     upstream elasticsearch-elk-9200{
-     server elasticsearch.elk:9200 weight=1; 
-    }
-    
-    upstream elasticsearch-elk-9300{
-     server elasticsearch.elk:9300 weight=1; 
+     
+     upstream kibana-elk{
+     server kibana.elk weight=1; 
     }
  
-     upstream kibana-elk{
-     server kibana.elk:5601 weight=1; 
+      upstream elasticsearch-elk{
+       server elasticsearch.elk weight=1; 
     }
  
  
@@ -122,31 +118,48 @@ http {
         
         }    
         
-        location /els9200{
-
-           proxy_pass http://elasticsearch-elk-9200/;
-        
-        }    
-        
-       location /els9300{
-
-           proxy_pass http://elasticsearch-elk-9300/;
-        
-        }    
-        
+  
       
         
   } 
-    
-     server {
+  
+         server {
 
-        listen    5601;
+        listen    9300;
+
+        server_name  33;
+        
+          location /{
+
+           proxy_pass http://elasticsearch-elk:9300/;
+        
+        }  
+    
+    }
+  
+       server {
+
+        listen    9200;
 
         server_name  3;
         
           location /{
 
-           proxy_pass http://kibana-elk/;
+           proxy_pass http://elasticsearch-elk:9200/;
+        
+        }  
+    
+    }
+    
+     server {
+
+        listen    5601;
+
+        server_name  4;
+        
+          location /{
+
+           proxy_pass http://kibana-elk:5601/;
         
         }  
     
