--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,15 +13,11 @@ events {
 http {
 
     upstream test1{ 
-     server test1.test:3000 weight=1; 
+     server test1.test weight=1; 
     }
     
      upstream test2{
-     server test2.test:3000 weight=1; 
-    }
- 
-    upstream k8s-ui{
-     server test2.test:3000 weight=1; 
+     server test2.test weight=1; 
     }
      
      upstream kibana-elk{
@@ -102,28 +98,26 @@ http {
 
         server {
 
-        listen    8008;
+        listen    3000;
 
         server_name  2;
 
         location /test1{
 
-           proxy_pass http://test1/;
+           proxy_pass http://test1:3000/;
         
         }
         
          location /test2{
 
-           proxy_pass http://test2/;
+           proxy_pass http://test2:3000/;
         
         }    
-        
-  
-      
+         
         
   } 
   
-         server {
+      server {
 
         listen    9300;
 
