--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,20 +12,24 @@ events {
 
 http {
 
-    upstream test1{ 
-     server test1.test weight=1; 
+    upstream test1-3000{ 
+     server test1.test:3000 weight=1; 
     }
     
-     upstream test2{
-     server test2.test weight=1; 
+     upstream test2-3000{
+     server test2.test:3000 weight=1; 
     }
      
-     upstream kibana-elk{
-     server kibana.elk weight=1; 
+     upstream kibana-elk-5601{
+     server kibana.elk:5601 weight=1; 
     }
  
-      upstream elasticsearch-elk{
-       server elasticsearch.elk weight=1; 
+      upstream elasticsearch-elk-9200{
+       server elasticsearch.elk:9200 weight=1; 
+    }
+    
+     upstream elasticsearch-elk-9300{
+       server elasticsearch.elk:9300 weight=1; 
     }
  
  
@@ -104,13 +108,13 @@ http {
 
         location /test1{
 
-           proxy_pass http://test1:3000/;
+           proxy_pass http://test1-3000/;
         
         }
         
          location /test2{
 
-           proxy_pass http://test2:3000/;
+           proxy_pass http://test2-3000/;
         
         }    
          
@@ -125,7 +129,7 @@ http {
         
           location /{
 
-           proxy_pass http://elasticsearch-elk:9300/;
+           proxy_pass http://elasticsearch-elk-9300/;
         
         }  
     
@@ -139,7 +143,7 @@ http {
         
           location /{
 
-           proxy_pass http://elasticsearch-elk:9200/;
+           proxy_pass http://elasticsearch-elk-9200/;
         
         }  
     
@@ -153,7 +157,7 @@ http {
         
           location /{
 
-           proxy_pass http://kibana-elk:5601/;
+           proxy_pass http://kibana-elk-5601/;
         
         }  
     
