--- a/traefik/traefik-ui.yml
+++ b/traefik/traefik-ui.yml
@@ -20,6 +20,7 @@ spec:
   - host: traefik.ui.local
     http:
       paths:
-      - backend:
-          serviceName: traefik-web-ui
-          servicePort: 80
+        - path: /ui      
+          backend:
+            serviceName: traefik-web-ui
+            servicePort: 80
