--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -1,3 +1,23 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: ingress
+  namespace: kube-system
+  
+---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: ingress
+subjects:
+  - kind: ServiceAccount
+    name: ingress
+    namespace: kube-system
+roleRef:
+  kind: ClusterRole
+  name: cluster-admin
+  apiGroup: rbac.authorization.k8s.io
+
 kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
@@ -16,6 +36,7 @@ spec:
         k8s-app: traefik-ingress-lb
         name: traefik-ingress-lb
     spec:
+      serviceAccountName: ingress
       terminationGracePeriodSeconds: 60
       hostNetwork: true
       containers:
