--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -1,17 +1,17 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: ingress
+  name: traefik-ingress
   namespace: kube-system
   
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: ingress
+  name: traefik-ingress
 subjects:
   - kind: ServiceAccount
-    name: ingress
+    name: traefik-ingress
     namespace: kube-system
 roleRef:
   kind: ClusterRole
