--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -41,6 +41,13 @@ spec:
       serviceAccountName: ingress
       terminationGracePeriodSeconds: 60
       hostNetwork: true
+      volumes:
+        - name: ssl
+          secret:
+            secretName: traefik-tls-secret
+        - name: config
+          configMap:
+            name: traefik-conf
       containers:
       - image: traefik
         name: traefik-ingress-lb
@@ -52,10 +59,11 @@ spec:
             cpu: 100m
             memory: 20Mi
         ports:
-        - containerPort: 80
-          hostPort: 80
+        - containerPort: 80 
         - containerPort: 8080
-          hostPort: 8080
+        - containerPort: 443
         args:
+        - --web.address=:8080
         - --web
         - --kubernetes
+        - --configfile=/config/traefik.toml
