--- a/traefik/traefik-configmap.yml
+++ b/traefik/traefik-configmap.yml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  traefik.tom: |
+  traefik.toml: 
     defaultEntryPoints = ["http","https"]
     [entryPoints]
       [entryPoints.http]
