--- a/busybox/busybox.yml
+++ b/busybox/busybox.yml
@@ -4,6 +4,10 @@ metadata:
   name: busybox
   namespace: default
 spec:
+  volumes:
+    - name: config
+      configMap:
+        name: busybox-config
   containers:
   - image: busybox
     command:
@@ -11,6 +15,9 @@ spec:
       - "3600"
     imagePullPolicy: IfNotPresent
     name: busybox
+    volumeMounts:
+      - mountPath: "/config"
+        name: "config"
   restartPolicy: Always
   hostNetwork: true
   dnsPolicy: ClusterFirstWithHostNet
