--- a/busybox/busybox-configmap.yml
+++ b/busybox/busybox-configmap.yml
@@ -17,5 +17,5 @@ data:
           KeyFile = "/ssl/ca-key.pem"
 kind: ConfigMap
 metadata: 
-  name: traefik-conf
+  name: busybox-config
   namespace: default
