--- a/busybox/traefik.toml
+++ b/busybox/traefik.toml
@@ -8,5 +8,5 @@ defaultEntryPoints = ["http","https"]
   address = ":443"
     [entryPoints.https.tls]
       `entryPoints`.`https`.`tls`.`certificates`
-      CertFile = "/ssl/ca.pem"
-      KeyFile = "/ssl/ca-key.pem"
+      CertFile = "/config/tls.crt"
+      KeyFile = "/config/tls.key"
