--- a/traefik/traefik-ui.yml
+++ b/traefik/traefik-ui.yml
@@ -19,7 +19,7 @@ spec:
   tls:
   - secretName: traefik-tls-secret
   rules:
-  - host: traefik.ui.local
+  - host: traefik.ui.cs.cloud.com
     http:
       paths:
         - path: 
