--- a/k8s-dashboard/k8s-dashboard.yml
+++ b/k8s-dashboard/k8s-dashboard.yml
@@ -180,7 +180,7 @@ metadata:
   namespace: kube-system
 spec:
   rules:
-  - host: k8s.ui.local
+  - host: k8s.ui.cs.cloud.com
     http:
       paths:
         - backend:
