--- a/k8s-dashboard/k8s-dashboard-bak.yml
+++ b/k8s-dashboard/k8s-dashboard-bak.yml
@@ -1,3 +1,33 @@
+# Copyright 2017 The Kubernetes Authors.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+# Configuration to deploy release version of the Dashboard UI compatible with
+# Kubernetes 1.8.
+#
+# Example usage: kubectl create -f <this_file>
+
+# ------------------- Dashboard Secret ------------------- #
+
+apiVersion: v1
+kind: Secret
+metadata:
+  labels:
+    k8s-app: kubernetes-dashboard
+  name: kubernetes-dashboard-certs
+  namespace: kube-system
+type: Opaque
+
 ---
 # ------------------- Dashboard Service Account ------------------- #
 
@@ -86,20 +116,33 @@ spec:
       - name: kubernetes-dashboard
         image: gcr.io/google_containers/kubernetes-dashboard-amd64:v1.8.1
         ports:
-        - containerPort: 9090
+        - containerPort: 8443
+          protocol: TCP
         args:
-          # - --auto-generate-certificates
+          - --auto-generate-certificates
           # Uncomment the following line to manually specify Kubernetes API server Host
           # If not specified, Dashboard will attempt to auto discover the API server and connect
           # to it. Uncomment only if the default does not work.
           # - --apiserver-host=http://my-address:port
+        volumeMounts:
+        - name: kubernetes-dashboard-certs
+          mountPath: /certs
+          # Create on-disk volume to store exec logs
+        - mountPath: /tmp
+          name: tmp-volume
         livenessProbe:
           httpGet:
+            scheme: HTTPS
             path: /
-            port: 9090
+            port: 8443
           initialDelaySeconds: 30
           timeoutSeconds: 30
- 
+      volumes:
+      - name: kubernetes-dashboard-certs
+        secret:
+          secretName: kubernetes-dashboard-certs
+      - name: tmp-volume
+        emptyDir: {}
       serviceAccountName: kubernetes-dashboard
       # Comment the following tolerations if Dashboard must not be deployed on master
       tolerations:
@@ -117,10 +160,11 @@ metadata:
   name: kubernetes-dashboard
   namespace: kube-system
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
-    - port: 9090
-      targetPort: 9090 
+    - port: 443
+      targetPort: 8443
+      nodePort: 31443
   selector:
     k8s-app: kubernetes-dashboard
 
@@ -141,5 +185,5 @@ spec:
       paths:
         - backend:
             serviceName: kubernetes-dashboard
-            servicePort: 9090
+            servicePort: 443
      
