--- a/elk/logstash.dpm.yml
+++ b/elk/logstash.dpm.yml
@@ -29,6 +29,6 @@ spec:
           hostPath:
             path: /K8s-Deployment/elk/logstash.conf
       nodeSelector:
-        nodeName: hsbcjenkins  
+        nodeName: caocentos7  
 
      
