--- a/elk/logstash.conf
+++ b/elk/logstash.conf
@@ -2,15 +2,15 @@ input {
         file {
                 path => "/run/docker/libcontainerd/containerd/events.log"
                 type => "docker events"
-                format =>json
-                start_position => "beginning" #从文件开始处读写
-        }
-#       stdin {}  #可以从标准输入读数据
+                format =>"json"
+                start_position => "beginning" 
+               }
+#       stdin {} 
 }
 
 output{
        elasticsearch {
-                       hosts=>"elasticsearch:9200"
+                       hosts=>"http://elasticsearch:9200"
                       }
 
 }
