--- a/elk/logstash.conf
+++ b/elk/logstash.conf
@@ -1,6 +1,6 @@
 input {
         file {
-                path => "/run/docker/libcontainerd/containerd/events.log"
+                path =>["/run/docker/libcontainerd/containerd/events.log"]
                 type => "docker events"
                 format =>"json"
                 start_position => "beginning" 
@@ -8,9 +8,21 @@ input {
 #       stdin {} 
 }
 
+filter {
+ 
+json {
+source => "json_body"
+remove_field => ["message","body","json_body" ]
+}
+ 
+}
+
+
 output{
        elasticsearch {
-                       hosts=>"http://elasticsearch:9200"
+                       hosts=>"elasticsearch:9200"
+                       protocol => "http"
+                       index => "logstash-json"
                       }
 
 }
