--- a/elk/logstash.conf
+++ b/elk/logstash.conf
@@ -1,6 +1,6 @@
 input {
         file {
-                path =>["/run/docker/libcontainerd/containerd/events.log"]
+                path =>["/logstash-logs/events.log"]
                 type => "docker events"
                 start_position => "beginning" 
                }
