--- a/elk/logstash.dpm.yml
+++ b/elk/logstash.dpm.yml
@@ -25,17 +25,17 @@ spec:
         - containerPort: 9600
         args:
           - "-f"
-          - "/config-dir/logstash.conf"             
+          - "/config-dir"             
         volumeMounts:
           - mountPath: /config-dir
-            name: logstash-conf
+            name: logstash-confs            
           - mountPath: /logstash-logs/events.log
             name: logstash-logs
             
       volumes:
-        - name: logstash-conf
+        - name: logstash-confs
           hostPath:
-            path: /K8s-Deployment/elk
+            path: /K8s-Deployment/elk/logstash-confs
         - name: logstash-logs
           hostPath:
             path: /run/docker/libcontainerd/containerd/events.log
