--- a/elk/logstash.dpm.yml
+++ b/elk/logstash.dpm.yml
@@ -27,15 +27,16 @@ spec:
           - "-f"
           - "/config-dir"             
         volumeMounts:
-          - mountPath: /config-dir
-            name: logstash-confs            
-          - mountPath: /logstash-logs/events.log
-            name: logstash-logs
+          - mountPath: "/config-dir"
+            name: "logstash¡£confs"            
+          - mountPath: "/logstash-logs/events.log"
+            name: "logstash-logs"
             
       volumes:
-        - name: logstash-confs
+        - name: "logstash¡£confs" 
           hostPath:
-            path: /K8s-Deployment/elk/logstash-confs
+            path: "/K8s-Deployment/elk/logstash-confs"
+            
         - name: logstash-logs
           hostPath:
             path: /run/docker/libcontainerd/containerd/events.log
