--- a/elk/logstash.dpm.yml
+++ b/elk/logstash.dpm.yml
@@ -28,12 +28,12 @@ spec:
           - "/config-dir"             
         volumeMounts:
           - mountPath: "/config-dir"
-            name: "logstash¡£confs"            
+            name: "logstash-confs"            
           - mountPath: "/logstash-logs/events.log"
             name: "logstash-logs"
             
       volumes:
-        - name: "logstash¡£confs" 
+        - name: "logstash-confs" 
           hostPath:
             path: "/K8s-Deployment/elk/logstash-confs"
             
