--- a/elk/filebeat.conf.yml
+++ b/elk/filebeat.conf.yml
@@ -42,9 +42,9 @@ filebeat.prospectors:
 
   # Optional additional fields. These fields can be freely picked
   # to add additional information to the crawled log files for filtering
-  #fields:
-  #  level: debug
-  #  review: 1
+  fields:
+    level: debug
+    review: 1
 
   ### Multiline options
 
