--- a/elk/filebeat.conf.yml
+++ b/elk/filebeat.conf.yml
@@ -2,7 +2,7 @@ filebeat:
   prospectors:
     - paths:
         - "/logs/events.log"
-      input_type: filebeat-log
+      input_type: log
       document_type: tomcat-log
       fields:
         level: debug
